# ChangeLog for media-gfx/imagemagick
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.121 2005/02/21 16:50:33 agriffis Exp $

  20 Feb 2005; Aron Griffis <agriffis@gentoo.org> imagemagick-6.1.8.8.ebuild:
  stable on ia64 #77932

  17 Feb 2005; Guy Martin <gmsoft@gentoo.org> imagemagick-6.1.8.8.ebuild:
  Stable on hppa.

  21 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  -imagemagick-6.0.7.1.ebuild, -imagemagick-6.0.8.1.ebuild,
  -imagemagick-6.1.0.1.ebuild, imagemagick-6.1.8.8.ebuild:
  Solved file collision problem, bug #78740. Ebuild clean up

  20 Jan 2005; Hardave Riar <hardave@gentoo.org> imagemagick-6.1.8.8.ebuild:
  Stable on mips, bug #77932.

  20 Jan 2005; Bryan Østergaard <kloeri@gentoo.org>
  imagemagick-6.1.8.8.ebuild:
  Stable on alpha, bug 77932.

  19 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  imagemagick-6.1.8.8.ebuild:
  Stable on amd64, bug #77932

  18 Jan 2005; Olivier Crête <tester@gentoo.org> imagemagick-6.1.8.8.ebuild:
  Stable on x86 wrt security bug #77932

  18 Jan 2005; Michael Hanselmann <hansmi@gentoo.org> :
  Stable on ppc.

  18 Jan 2005; Markus Rothe <corsair@gentoo.org> imagemagick-6.1.8.8.ebuild:
  Stable on ppc64; bug #77932

  18 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  imagemagick-6.1.8.8.ebuild:
  Stable on sparc wrt #77932

  18 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  +files/imagemagick-6.1.8.8-fpx.patch, imagemagick-6.1.8.8.ebuild:
  Fixed fpx compile problems

*imagemagick-6.1.8.8 (17 Jan 2005)

  17 Jan 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  +imagemagick-6.1.8.8.ebuild:
  This release of imagemagick fixes .psd Image File Decode Heap Overflow
  Vulnerability, bug #77932. Fixed collision problem with gaim, bug #73464 and
  Ghostscript fonts problem, bug #68205

  10 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  imagemagick-6.1.3.4.ebuild:
  Stable on sparc wrt #71953
