@@ -1,12 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 MD5 ef4af3dba983edbe00115f3e31b3e64c imagemagick-6.1.6.0.ebuild 2164
+MD5 6565d66b5e7536613fbc6f1d19c9b09d imagemagick-6.2.0.4.ebuild 2291
 MD5 26d349b9ac3126394eca1640b90c1e66 imagemagick-6.1.8.8.ebuild 2317
 MD5 905394a2ebdbfa1a49e7ea6cb9de1180 imagemagick-6.1.3.2.ebuild 2123
 MD5 51d852e32341aca08dc8108a1e34866a imagemagick-6.1.3.4.ebuild 2387
-MD5 32ca487571aae2cc7ff0ddbf6c705812 ChangeLog 18212
+MD5 74c65c6c6120c75f447a2927809b0165 ChangeLog 18385
 MD5 e1f6c302199a36c1be4ecf1654be9bac metadata.xml 224
 MD5 7f9f2aefd153cd638c79eb85bcc39b00 files/imagemagick-6.1.8.8-fpx.patch 504
 MD5 2dd9ba895922b7d6bb513572bb851254 files/digest-imagemagick-6.1.3.2 73
 MD5 88435dc2f0a4064ae49313f41419695d files/digest-imagemagick-6.1.3.4 73
 MD5 4dbe04f2c27a20911e1080d591674997 files/digest-imagemagick-6.1.6.0 73
 MD5 42fd34630ded62400ed31be1426e3b32 files/digest-imagemagick-6.1.8.8 73
+MD5 a886688e5d996646404d58caab5d908e files/digest-imagemagick-6.2.0.4 73
 MD5 edbc2be86318f2676c55ce64e47ea2f6 files/perlpatch.diff 1598
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFCJlSnZ/iYVBmujdURAibgAKCrdUGKr5fOk23i5235LhtSblVOYACffZ0s
+llNHX6JMXrVvkTtjvS7qRe8=
+=fIeU
+-----END PGP SIGNATURE-----
