@@ -1,0 +1,1 @@
+MD5 682cb65818a5162dadfbb2b9f9a35796 ImageMagick-6.2.0-4.tar.bz2 4642968
