@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.121 2005/02/21 16:50:33 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.122 2005/03/02 23:04:38 sekretarz Exp $
+
+*imagemagick-6.2.0.4 (03 Mar 2005)
+
+  03 Mar 2005; Karol Wojtaszek <sekretarz@gentoo.org>
+  +imagemagick-6.2.0.4.ebuild:
+  Version bump, release fixes security bug #83542
 
   20 Feb 2005; Aron Griffis <agriffis@gentoo.org> imagemagick-6.1.8.8.ebuild:
   stable on ia64 #77932
